# projeto-final-eric_carlos_melvin

./: .gitmodules  README.md
Etapa 3/: README.md
Etapa 3 - Testes/dois_mpu9250_postura/: CMakeLists.txt  MadgwickAHRS.c  MadgwickAHRS.h  README.md  algoritmo_postura.c  calibrate.c  calibrate.h  imu_driver.c  imu_driver.h  main.c  mpu9250_i2c.c  mpu9250_i2c.h  sensor_watchdog.c  sensor_watchdog.h
Etapa 3 - Testes/hipsafe_1_sensor__AHRS/: CMakeLists.txt  analise_postural.cpp  analise_postural_sensor.c  analise_postural_sensor.h
Etapa 3 - Testes/hipsafe_1_sensor__AHRS/drivers/buzzer/: buzzer.c
Etapa 3 - Testes/hipsafe_1_sensor__AHRS/drivers/sdcard/: SDCard.h
Etapa 3 - Testes/hipsafe_1_sensor__AHRS/evento/: evento.cpp
Etapa 3 - Testes/hipsafe_3_sensores_AHRS/: CMakeLists.txt  analise_postural.cpp  analise_postural_sensor.c
Etapa 3 - Testes/hipsafe_3_sensores_AHRS/drivers/mpu6050/: mpu6050_i2c.c
Etapa 3 - Testes/hipsafe_3_sensores_AHRS/drivers/sdcard/: SDCard.c
Etapa 3 - Testes/hipsafe_3_sensores_AHRS_ang_rel/: analise_postural.cpp  analise_postural_sensor.c  analise_postural_sensor.h
Etapa 3 - Testes/hipsafe_3_sensores_AHRS_ang_rel/drivers/button/: button.c
Etapa 3 - Testes/hipsafe_3_sensores_AHRS_ang_rel/drivers/mpu6050/: mpu6050_i2c.h
Etapa 3 - Testes/hipsafe_v1/: CMakeLists.txt  CMakeLists_pico.txt  MPU6050_visualizer.py  analise_postural.cpp  analise_postural_old.cpp  analise_postural_sensor.c  analise_postural_sensor.h  main.cpp
Etapa 3 - Testes/hipsafe_v1/Testes/: main_teste_eventoObj.cpp
Etapa 3 - Testes/hipsafe_v1/drivers/button/: button.h
Etapa 3 - Testes/hipsafe_v1/drivers/buzzer/: buzzer.h
Etapa 3 - Testes/hipsafe_v1/drivers/filter/: madgwickFilter.c  madgwickFilter.h
Etapa 3 - Testes/hipsafe_v1/drivers/madgwick/: MadgwickAHRS.c
Etapa 3 - Testes/hipsafe_v1/drivers/mpu9250/: mpu9250_i2c.c
Etapa 3 - Testes/hipsafe_v1/drivers/postura/: algoritmo_postura.c  algoritmo_postura.h
Etapa 3 - Testes/hipsafe_v1/drivers/rtc/: ds3231.c  ds3231.h  rtc_utils.c  rtc_utils.h
Etapa 3 - Testes/hipsafe_v1/drivers/sdcard/: SDCard.c  SDCard.h  hw_config.c
Etapa 3 - Testes/hipsafe_v1/evento/: evento.h
Etapa 3 - Testes/hipsafe_v1/inc/: analise_postural.h  bogus.h  estruturas_de_dados.hpp  evento.h
Etapa 3 - Testes/hipsafe_v1/src/: analise_postural.cpp  analise_postural_sensor.c  analise_postural_sensor.h  bogus.cpp  evento.cpp
Etapa 3 - Testes/teste_Madgwick_AHRS/: CMakeLists.txt  MadgwickAHRS.c  README.md  main.c  mpu6050_i2c.c  mpu6050_i2c.h
Etapa 4/: HipSafe - Apresentação.pptx
Etapa 4/Apresentação/: HipSafe - Apresentação.pptx  Pitch HipSafe.pptx
Etapa 4/projeto_final/: CMakeLists.txt  README.md  main.cpp
Etapa 4/projeto_final/drivers/button/: button.c  button.h
Etapa 4/projeto_final/drivers/buzzer/: buzzer.c  buzzer.h
Etapa 4/projeto_final/drivers/madgwick/: MadgwickAHRS.h
Etapa 4/projeto_final/drivers/mpu9250/: mpu9250_i2c.c  mpu9250_i2c.h
Etapa 4/projeto_final/drivers/postura/: algoritmo_postura.c  algoritmo_postura.h
Etapa 4/projeto_final/drivers/rtc/: rtc_utils.c  rtc_utils.h
Etapa 4/projeto_final/drivers/sdcard/: SDCard.c  SDCard.h
Etapa 4/projeto_final/drivers/watchdog/: sensor_watchdog.c  sensor_watchdog.h
Etapa 4/projeto_final/inc/: analise_postural.h  estruturas_de_dados.hpp  evento.h
Etapa 4/projeto_final/src/: analise_postural.cpp  evento.cpp
